# nerv

./: .gitignore  DEMO.md  README.md  debug-patch.js  debug.html  docker-compose.yml  package.json  simple-test.html  test-konva.html  working-nerv.html
.github/workflows/: ci-cd.yml  ci.yml
backend/python-api/: .coverage  README.md  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/python-api/app/: main.py
backend/python-api/app/api/v1/: router.py
backend/python-api/app/api/v1/endpoints/: collection.py  construction.py  geometry.py  graph.py  magi.py
backend/python-api/app/core/: config.py  exceptions.py  logging_config.py
backend/python-api/app/db/: session.py
backend/python-api/app/models/: graph.py
backend/python-api/app/services/: neo4j_service.py  rust_bridge.py
backend/python-api/app/tests/: __init__.py  conftest.py  test_api_collection.py  test_api_geometry.py  test_api_magi.py
backend/rust-core/: Cargo.toml
backend/rust-core/src/: lib.rs
backend/rust-core/src/collection/: mod.rs
backend/rust-core/src/construction/: mod.rs
backend/rust-core/src/geometry/: mod.rs  operations.rs  primitives.rs  transformations.rs
backend/rust-core/src/utils/: mod.rs
frontend/: index.html
frontend/js/: app.js
js/: app.js  canvas-fallback.js
scripts/: run-tests.sh
